# PETCTApp_Monolith

./: .env  .gitignore  CLAUDE.md  README.md  README_SETUP.md  debug_log.txt  diff.patch  lesion_overview.py  pyproject.toml  scratch_profile.py  simulate_seg.py  start.bat  start.sh  test_profile.py
AI_engines/engine_autopet/: pyproject.toml
AI_engines/engine_autopet/src/: __init__.py  engine.py
AI_engines/engine_autopet/tests/: test_mock_nifti.py
AI_engines/engine_nnunet/: Dockerfile  main.py
AI_engines/engine_nnunet_old_ver/: Dockerfile  main.py
AI_engines/engine_totalseg/: main.py  (+1 more)
DICOM_converter/: __init__.py  anonymizer.py  converter.py  dicom_utils.py  pipeline.py  resample_utils.py  suv_utils.py
engine_autopet/: Dockerfile  main.py
engine_nnunet/: Dockerfile  main.py  pyproject.toml
engine_nnunet/src/: __init__.py  engine.py
engine_nnunet/tests/: test_mock_nifti.py
engine_totalseg/: Dockerfile
scratch/: main_layout.py  test_memory.py  test_napari_layer.py  test_napari_speed.py  test_refine.py  test_refine2.py  test_roi_worker.py
scripts/: pull_and_start.sh  push_images.sh  start.sh  start_app.bat  start_app.vbs  start_engine.bat  start_engine.vbs
src/: main.py
tests/: paint_tool_optimization_plan.md  test_any.py  test_apply.py  test_astype copy.py  test_astype.py  test_astype2.py  test_autopet_interactive.py  test_bool_contig.py  test_contiguous.py  test_copy.py  test_copyto.py  test_engines.py  test_fast_flip.py  test_gil.py  test_gil_scipy.py  test_lazy_zoom.py  test_napari.py  test_napari_data_ref.py  test_nibabel.py  test_nnunet_prob.py  test_ops.py  test_perf.py  test_prob_system.py  test_review_b4_correctness.py  test_review_eraser_flood.py  test_review_mro_visible_viewers.py  test_review_save_path_logic.py  test_review_threshold_preview_copy.py  test_review_to_napari_thread_gil.py  test_review_unsaved_check.py  test_session_metadata.py  test_speed.py  test_speeds.py  test_speeds2.py  test_to_napari.py  test_validate.py  test_view.py  test_worker.py  verify_gui_imports.py  verify_refinement_logic.py
(+77 files in other folders)
