[project]
name = "petctapp-monolith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "napari[all,optional,pyqt6]>=0.6.6",
    "nibabel>=5.3.3",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydicom>=3.0.1",
    "pyqt6>=6.10.2",
    "python-multipart>=0.0.22",
    "scipy>=1.17.0",
    "sqlalchemy>=2.0.0",
]
