[project]
name = "engine-nnunet"
version = "0.1.0"
description = "nnUNet segmentation engine backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "nibabel>=5.3.3",
    "nnunetv2>=2.6.4",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.41.0",
]
